melhorando interface do index

--- a/app/views/task/index.html.haml
+++ b/app/views/task/index.html.haml
@@ -4,10 +4,16 @@
   = render partial: 'new'
 .row
   .col-xs-6
-    %strong
-      = "Undone tasks"
-    = render partial: "list", locals: {tasks: @undone_tasks}
+    .panel.panel-default
+      .panel-heading
+        %strong
+          = "Undone tasks"
+      .panel-body
+        = render partial: "list", locals: {tasks: @undone_tasks}
   .col-xs-6
-    %strong
-      = "Done tasks"
-    = render partial: "list", locals: {tasks: @done_tasks}
+    .panel.panel-default
+      .panel-heading
+        %strong
+          = "Done tasks"
+      .panel-body
+        = render partial: "list", locals: {tasks: @done_tasks}
