--- a/app/views/task/_new.html.haml
+++ b/app/views/task/_new.html.haml
@@ -2,6 +2,6 @@
   .col-xs-12.form-group.field
     .row
       = f.text_field :task
-      %button.btn.btn-primary.btn-sm{type: 'submit'}
+      %button.btn.btn-primary.btn-sm#confirm_button{type: 'submit'}
         %i.fa.fa-plus
         = 'Add'
