--- a/app/views/task/_list.html.haml
+++ b/app/views/task/_list.html.haml
@@ -5,7 +5,7 @@
         %td
           .col-xs-8
             = task.task
-            = link_to task_path(id: task.id, task: {done: !task.done}), method: :put, class: "pull-left btn btn-xs" do
+            = link_to task_path(id: task.id, task: {done: !task.done}), method: :put, class: "pull-left btn btn-xs", id: "change_state_#{task.id}" do
               - if task.done?
                 %i.fa.fa-check-square-o
               - else
@@ -15,6 +15,6 @@
             = link_to edit_task_path(task), class: "btn btn-primary btn-sm" do
               %i.fa.fa-pencil
               = 'Edit'
-            = link_to task, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: "btn btn-danger btn-sm" do
+            = link_to task, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: "btn btn-danger btn-sm", id: "delete_task_#{task.id}" do
               %i.fa.fa-trash
               = 'Delete'
